[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "bmp"
version = "0.2"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.maturin]
python-source = "python"
module-name = "bmp._bmp"

[project.optional-dependencies]
pyterrier = [
    'python-terrier',
    'pyterrier-alpha',
]

[project.entry-points."pyterrier.artifact"]
"sparse_index.bmp" = "bmp.pyterrier:BmpIndex"
